# claude_stuff

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md
rag/: .gitignore  CLAUDE.md  DESIGN.md  PHI_SCRUBBING.md  __init__.py  config.py  pyproject.toml  requirements.txt
rag/chunking/: __init__.py  ast_chunker.py  md_chunker.py  thread_chunker.py  token_counter.py
rag/core/: __init__.py  errors.py  protocols.py  schema.py  types.py
rag/docs/: DESIGN_V2.md  DESIGN_V2_CRITIQUE.md  GRAPHITI_MIGRATION.md  NLP_BACKENDS.md  PHASING_STRATEGY.md
rag/extractors/: __init__.py  base.py  linker.py  patterns.py  registry.py
rag/extractors/languages/: __init__.py  csharp.py  go.py  python.py  typescript.py
rag/extractors/routes/: __init__.py  csharp_routes.py  go_routes.py  python_routes.py  typescript_routes.py
rag/indexing/: __init__.py  embedder.py  lance_store.py
rag/phases/: AGENTS.md  PHASE_1_FOUNDATION.md  PHASE_2_CODE_CRAWLER.md  PHASE_3_CONTENT_CRAWLERS.md  PHASE_4_PHI_SCRUBBING.md  PHASE_5_EMBEDDING_STORAGE.md  PHASE_6_RETRIEVAL.md  PHASE_7_ORCHESTRATION.md
rag/phases/phase0/: task.md  task1.md  task2.md  task3.md  task4.md  task5.md  test.md
rag/phases/phase1/: task.md  task1.md  task2.md  task3.md  task4.md  test.md
rag/phases/phase2/: task.md  task1.md  task2.md  task3.md  test.md
rag/phases/phase3/: task.md  task1.md  task2.md  test.md
rag/phases/phase4/: READINESS_ASSESSMENT.md  task.md  task4a_1.md  task4a_2.md  task4c_1.md  task4e_1.md  test.md
rag/phases/phase5/: task.md  task1.md  task2.md  test.md
rag/phases/phase6/: task.md  task1.md  task2.md  task3.md  test.md
rag/phases/phase7/: task.md  task1.md  task2.md  test.md
rag/phases/phase8/: task.md  task1.md  task2.md  task3.md  test.md
rag/rag/: __init__.py  __main__.py  config.py
rag/rag/boundary/: __init__.py  graph.py  imports.py  resolver.py  service_calls.py  service_refs.py
rag/rag/chunking/: __init__.py  ast_chunker.py  md_chunker.py  thread_chunker.py  token_counter.py  yaml_chunker.py
rag/rag/crawlers/: __init__.py  code.py  config.py  conversation.py  deploy.py  docs.py
rag/rag/indexing/: __init__.py  bm25_store.py  embedder.py  indexer.py  lance_store.py  tokenizer.py
rag/rag/models/: __init__.py  audit.py  chunk.py  manifest.py  query.py  types.py
rag/rag/pipeline/: __init__.py  protocols.py  scrub_gate.py
rag/rag/retrieval/: __init__.py  freshness.py  fusion.py  pipeline.py  query_boost.py  reranker.py
rag/rag/scrubbing/: __init__.py  allowlist.py  pseudonymizer.py  recognizers.py  scrubber.py  secrets.py
rag/scrubbing/: __init__.py  nlp_backend.py  pseudonymizer.py  scrubber.py
rag/tests/: conftest.py  test_allowlist.py  test_ast_chunker.py  test_bm25_store.py  test_chunk.py  test_code_crawler.py  test_conversation_crawler.py  test_deploy_crawler.py  test_docs_crawler.py  test_embedder.py  test_freshness.py  test_fusion.py  test_imports.py  test_indexer_integration.py  test_lance_store.py  test_md_chunker.py  test_pseudonymizer.py  test_query_boost.py  test_reranker.py  test_resolver.py  test_retrieval_pipeline.py  test_scrub_gate.py  test_scrub_gate_e2e.py  test_scrubber.py  test_secrets_detection.py  test_service_calls.py  test_service_graph.py  test_service_refs.py  test_thread_chunker.py  test_token_counter.py  test_tokenizer.py  test_types.py  test_yaml_chunker.py
rag/tests/test_phase1/: __init__.py  test_ast_chunker.py  test_md_chunker.py  test_thread_chunker.py  test_token_counter.py
rag/tests/test_phase2/: __init__.py  test_nlp_backend.py  test_pseudonymizer.py  test_scrubber.py
rag/tests/test_phase3/: __init__.py  test_embedder.py  test_lance_store.py
(+263 files in other folders)
