[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["rag", "rag.core", "rag.chunking"]
package-dir = {"rag" = "."}

[tool.setuptools.package-data]
"*" = ["py.typed"]

[project]
name = "rag"
version = "0.1.0"
description = "RAG pipeline for codebase knowledge extraction"
requires-python = ">=3.11"
dependencies = [
    "tiktoken>=0.12.0",
    "transformers>=5.0.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-c-sharp>=0.23.1",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
