[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["rag", "rag.core", "rag.chunking", "rag.scrubbing", "rag.indexing"]
package-dir = {"rag" = "."}

[tool.setuptools.package-data]
"*" = ["py.typed"]

[project]
name = "rag"
version = "0.1.0"
description = "RAG pipeline for codebase knowledge extraction"
requires-python = ">=3.11"
dependencies = [
    "tiktoken>=0.12.0",
    "transformers>=5.0.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-c-sharp>=0.23.1",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    # Phase 2: PHI scrubbing
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "faker>=20.0",
    "lancedb>=0.27.1",
    "fastembed>=0.7.4",
    "pyarrow>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
# Optional NLP backends for PERSON/LOCATION detection
# See docs/NLP_BACKENDS.md for details
spacy = [
    "spacy>=3.7",
    # Note: Also requires model download:
    # python -m spacy download en_core_web_lg
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
